--- a/index_list.html
+++ b/index_list.html
@@ -503,7 +503,7 @@
                             <ul>
                                 <li>問答清單 <a href="tpmlblind_drlist.htm" target="_blank"></a></li>
                                 <li>問答新增／編修 <a href="tpmlblind_drEdit.htm" target="_blank"></a></li>
-                                <li>審核答題清單 <a href="#" target="_blank"></a>｜審核答題 <a href="#" target="_blank"></a></li>
+                                <li>審核答題清單 <a href="tpmlblind_drAnswerlist.htm" target="_blank"></a>｜審核答題 <a href="tpmlblind_drAnsweredit.htm" target="_blank"></a></li>
                                 <li>補單(紙本答題輸入) <a href="#" target="_blank"></a></li>
                             </ul>
                         </td>
