--- a/tpmlblind_drAnsweradd.htm
+++ b/tpmlblind_drAnsweradd.htm
@@ -67,22 +67,22 @@
                                         </div>
                                         <div class="form_grp">
                                             <div class="labelEffect">
-                                                <textarea id="answer1">公債的殖利率又是怎麼決定的呢？ 是由公債的價格所決定，而且公債價格與公債殖利率呈現反向關係，當政府債券給購買者的報酬是固定的時候，隨著公債價格越高時，在此價格下領取固定的報酬所換算的報酬率（或殖利率）就會比較低；反之，當公債價格下跌時，所換算出的公債的殖利率就會上升。</textarea>
+                                                <textarea id="answer1"></textarea>
                                                 <label for="answer1">題目一答案<abbr>*</abbr></label>
                                             </div>
                                             <!-- <div class="help">說明文字</div> -->
                                         </div>
                                         <div class="form_grp">
                                             <div class="labelEffect">
-                                                <input name="answer1link" id="answer1link" type="text" value="https://goldensun.get.com.tw/Columns/detail.aspx?no=421352">
+                                                <input name="answer1link" id="answer1link" type="text" value="">
                                                 <label for="answer1link">題目一資料來源<abbr>*</abbr></label>
                                             </div>
                                         </div>
                                         <div class="form_grp">
                                             <div class="labelEffect">
                                                 <select id="replystatue" name="" class="dynamicCol used">
-                                                    <option value="" disabled="disabled">請選擇</option>
-                                                    <option value="Y" selected="">答對</option>
+                                                    <option value="" selected="" disabled="disabled">請選擇</option>
+                                                    <option value="Y">答對</option>
                                                     <option value="N">答錯</option>
                                                 </select>
                                                 <label for="replystatue">是否答對<abbr>*</abbr></label>
@@ -97,23 +97,23 @@
                                         </div>
                                         <div class="form_grp">
                                             <div class="labelEffect">
-                                                <textarea id="answer2">性格心理學早在 19 世紀末由佛洛伊德(Floyd)等人展開的精神分析學派開始，直到後來出現的現象學派、特質學派、行為學派及社會認知學派等，已成為一門穩定對人類性格探討的學問。另外，在社會心理學這門分支，研究對象從「個體」變成「群體中的個體」，探索人在社會中的認知過程、情感活動、意志品質等心理議題。</textarea>
+                                                <textarea id="answer2"></textarea>
                                                 <label for="answer2">題目二答案<abbr>*</abbr></label>
                                             </div>
                                             <!-- <div class="help">說明文字</div> -->
                                         </div>
                                         <div class="form_grp">
                                             <div class="labelEffect">
-                                                <input name="answer2link" id="answer1link" type="text" value="心理學導論-溫世頌 p.123">
+                                                <input name="answer2link" id="answer1link" type="text" value="">
                                                 <label for="answer2link">題目二資料來源<abbr>*</abbr></label>
                                             </div>
                                         </div>
                                         <div class="form_grp">
                                             <div class="labelEffect">
                                                 <select id="replystatue" name="" class="dynamicCol used">
-                                                    <option value="" disabled="disabled">請選擇</option>
+                                                    <option value="" selected="" disabled="disabled">請選擇</option>
                                                     <option value="Y">答對</option>
-                                                    <option value="N" selected="">答錯</option>
+                                                    <option value="N">答錯</option>
                                                 </select>
                                                 <label for="replystatue">是否答對<abbr>*</abbr></label>
                                             </div>
@@ -124,27 +124,27 @@
                                         <h4 style="margin:0 0 20px 0;">讀者資料</h4>
                                         <div class="form_grp">
                                             <div class="labelEffect">
-                                                <input name="userName" id="userName" type="text" value="劉佳淇">
+                                                <input name="userName" id="userName" type="text" value="">
                                                 <label for="userName">姓名<abbr>*</abbr></label>
                                             </div>
                                             <!-- <div class="help">說明文字</div> -->
                                         </div>
                                         <div class="form_grp">
                                             <div class="labelEffect">
-                                                <input name="personalID" id="personalID" type="text" value="A123456789">
+                                                <input name="personalID" id="personalID" type="text" value="">
                                                 <label for="personalID">身分證字號<abbr>*</abbr></label>
                                             </div>
                                         </div>
                                         <div class="form_grp">
                                             <div class="labelEffect">
                                                 <input name="telno" id="telno" type="text" value="">
-                                                <label for="telno">聯絡電話<abbr>*</abbr></label>
+                                                <label for="telno">聯絡電話</label>
                                             </div>
                                         </div>
                                         <div class="form_grp">
                                             <div class="labelEffect">
                                                 <input name="email" id="email" type="text" value="">
-                                                <label for="email">email<abbr>*</abbr></label>
+                                                <label for="email">email</label>
                                             </div>
                                         </div>
                                         <div class="form_grp">
@@ -155,7 +155,7 @@
                                                     <option value="重度視障">中度視障</option>
                                                     <option value="重度視障">輕度視障</option>
                                                 </select>
-                                                <label for="messagetype">視力狀況</label>
+                                                <label for="messagetype">視力狀況<abbr>*</abbr></label>
                                             </div>
                                         </div>
                                         <div class="btn_grp">
