--- a/tpmlblind_drAnswerlist.htm
+++ b/tpmlblind_drAnswerlist.htm
@@ -113,7 +113,7 @@
                                         </form>
                                     </div>
                                     <div class="quick_btn">
-                                        <button class="btn btn-orange" onclick="window.location.href='#';"><i class="i_add"></i>新增</button>
+                                        <button class="btn btn-orange" onclick="window.location.href='tpmlblind_drAnsweradd.htm';"><i class="i_add"></i>補單</button>
                                     </div>
                                 </div>
                                 <div class="_content">
