--- a/tpmlblind_drlist.htm
+++ b/tpmlblind_drlist.htm
@@ -114,7 +114,7 @@
                                         </form>
                                     </div>
                                     <div class="quick_btn">
-                                        <button class="btn btn-orange" onclick="window.location.href='#';"><i class="i_add"></i>新增</button>
+                                        <button class="btn btn-orange" onclick="window.location.href='tpmlblind_drEdit';"><i class="i_add"></i>新增</button>
                                     </div>
                                 </div>
                                 <div class="_content">
@@ -157,7 +157,7 @@
                                                     <td data-title="編輯">
                                                         <div class="btn_grp">
                                                             <a href="tpmlblind_drAnswerlist.htm" class="btn" title="審核"><i class="i_edit"></i>審核答題</a>
-                                                            <a href="#" class="btn" title="審核"><i class="i_edit"></i>補單</a>
+                                                            <a href="tpmlblind_drAnsweradd.htm" class="btn" title="審核"><i class="i_edit"></i>補單</a>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -176,7 +176,7 @@
                                                     <td data-title="編輯">
                                                         <div class="btn_grp">
                                                             <a href="tpmlblind_drAnswerlist.htm" class="btn" title="審核"><i class="i_edit"></i>審核答題</a>
-                                                            <a href="#" class="btn" title="審核"><i class="i_edit"></i>補單</a>
+                                                            <a href="tpmlblind_drAnsweradd.htm" class="btn" title="審核"><i class="i_edit"></i>補單</a>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -195,7 +195,7 @@
                                                     <td data-title="編輯">
                                                         <div class="btn_grp">
                                                             <a href="tpmlblind_drAnswerlist.htm" class="btn" title="審核"><i class="i_edit"></i>審核答題</a>
-                                                            <a href="#" class="btn" title="審核"><i class="i_edit"></i>補單</a>
+                                                            <a href="tpmlblind_drAnsweradd.htm" class="btn" title="審核"><i class="i_edit"></i>補單</a>
                                                         </div>
                                                     </td>
                                                 </tr>
@@ -213,7 +213,7 @@
                                                     <td data-title="編輯">
                                                         <div class="btn_grp">
                                                             <a href="tpmlblind_drAnswerlist.htm" class="btn" title="審核"><i class="i_edit"></i>審核答題</a>
-                                                            <a href="#" class="btn" title="審核"><i class="i_edit"></i>補單</a>
+                                                            <a href="tpmlblind_drAnsweradd.htm" class="btn" title="審核"><i class="i_edit"></i>補單</a>
                                                         </div>
                                                     </td>
                                                 </tr>
