--- a/login_tpml.htm
+++ b/login_tpml.htm
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>勞安所主題網網站管理平台</title>
+    <title>北市圖主題網網站管理平台</title>
     <!--HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries [if lt IE 9]>
     <script src="js/html5shiv.js"></script>
     <script src="js/respond.min.js"></script>
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="css/customize.css">
     <!-- <link rel="stylesheet" href="css/animate.min.css"> -->
     <!-- favicon -->
-    <link href="images/favicon.png" rel="icon" type="image/x-icon">
+    <link href="images/favicon_tpml.png" rel="icon" type="image/x-icon">
     <!-- highlight -->
     <link rel="stylesheet" href="vendor/highlight/github-gist.css">
 </head>
@@ -29,10 +29,10 @@
         <div class="login">
             <h1>
                 <div class="pic">
-                    <img src="images/ilosh.png" alt="">
+                    <img src="images/tpml_logo.png" alt="">
 
                 </div>
-                <span>勞安所主題網網站管理平台</span>
+                <span>北市圖主題網網站管理平台</span>
             </h1>
             <div class="flex-form">
                 <div class="form_grp">
