--- a/aside_tpml.htm
+++ b/aside_tpml.htm
@@ -132,6 +132,7 @@
                 <ul>
                     <li><a href="tpmlkids_recommentBooksList.htm"><span>(兒童)好書推薦管理</span></a></li>
                     <li><a href="sysQA_list.htm"><span>(兒童)小博士信箱管理</span></a></li>
+                    <li><a href="#"><span>(兒童)小博士答題清單</span></a></li>
                     <li><a href="tpmlblind_memberlist.htm"><span>(視障)會員管理</span></a></li>
                     <li><a href="tpmlblind_messagelist.htm"><span>(視障)留言版管理</span></a></li>
                     <li><a href="tpmlblind_drlist.htm"><span>(視障)博士通問答管理</span></a></li>
