--- a/login_tpml.htm
+++ b/login_tpml.htm
@@ -60,14 +60,14 @@
                     </div>
                     <div class="help">請輸入圖片上的驗證碼英數字</div>
                 </div>
-                <div class="form_grp">
+                <!--div class="form_grp">
                     <div class="form_content">
                         <div class="check_grp form_inline">
                             <label><input name="" type="checkbox" value=""><span>記住我</span></label>
                         </div>
                         <a href="ilosh_fgPassword.htm">忘記密碼</a>
                     </div>
-                </div>
+                </div-->
                 <div class="btn_grp">
                     <button class="btn btn-primary">登入</button>
                 </div>
