--- a/tpmlkids_recommentBooksAdd.htm
+++ b/tpmlkids_recommentBooksAdd.htm
@@ -13,7 +13,7 @@
     <!-- hyUI css -->
     <link rel="stylesheet" href="css/supercms.css">
     <!-- favicon -->
-    <link href="images/favicon.png" rel="icon" type="image/x-icon">
+    <link href="images/favicon_tpml.png" rel="icon" type="image/x-icon">
     <!-- highlight -->
     <link rel="stylesheet" href="vendor/highlight/github-gist.css">
     <!-- fancybox -->
@@ -271,7 +271,7 @@
     // first example
     $(".treeview .treeview").treeview();
     $('header').load("header.htm");
-    $('aside').load("aside_ilosh.htm");
+    $('aside').load("aside_tpml.htm");
     </script>
     <!--Select multiple checkbox-->
     <script>
