--- a/tpmlkids_recommentBooksList.htm
+++ b/tpmlkids_recommentBooksList.htm
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/supercms.css">
     <!-- <link rel="stylesheet" href="css/animate.min.css"> -->
     <!-- favicon -->
-    <link href="images/favicon.png" rel="icon" type="image/x-icon">
+    <link href="images/favicon_tpml.png" rel="icon" type="image/x-icon">
     <!-- highlight -->
     <link rel="stylesheet" href="vendor/highlight/github-gist.css">
 </head>
@@ -298,7 +298,7 @@
     <script>
     // first example
     $('header').load("header.htm");
-    $('aside').load("aside_ilosh.htm");
+    $('aside').load("aside_tpml.htm");
     </script>
 </body>
 
