--- a/tpmlblind_drEdit.htm
+++ b/tpmlblind_drEdit.htm
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="vendor/fancybox/jquery.fancybox.min.css">
     <!-- <link rel="stylesheet" href="css/animate.min.css"> -->
     <!-- favicon -->
-    <link href="images/favicon.png" rel="icon" type="image/x-icon">
+    <link href="images/favicon_tpml.png" rel="icon" type="image/x-icon">
     <!-- highlight -->
     <link rel="stylesheet" href="vendor/highlight/github-gist.css">
 </head>
