--- a/tpmlblind_drlist.htm
+++ b/tpmlblind_drlist.htm
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/supercms.css">
     <!-- <link rel="stylesheet" href="css/animate.min.css"> -->
     <!-- favicon -->
-    <link href="images/favicon.png" rel="icon" type="image/x-icon">
+    <link href="images/favicon_tpml.png" rel="icon" type="image/x-icon">
     <!-- highlight -->
     <link rel="stylesheet" href="vendor/highlight/github-gist.css">
 </head>
