--- a/index_list.html
+++ b/index_list.html
@@ -11,6 +11,8 @@
     <script src="js/respond.min.js"></script>
     <![endif]-->
     <link rel="stylesheet" href="css/supercms.css">
+    <!-- favicon -->
+    <link href="images/favicon.png" rel="icon" type="image/x-icon">
     <style>
         html {
             scroll-behavior: smooth;
@@ -516,7 +518,7 @@
                                 <li>問答新增／編修 <a href="tpmlblind_drEdit.htm" target="_blank"></a></li>
                                 <li>審核答題清單 <a href="tpmlblind_drAnswerlist.htm" target="_blank"></a>｜審核答題 <a href="tpmlblind_drAnsweredit.htm" target="_blank"></a></li>
                                 <li>補單(紙本答題輸入) <a href="tpmlblind_drAnsweradd.htm" target="_blank"></a></li>
-                                <li>答題(使用者)清單 <a href="#" target="_blank"></a></li>
+                                <li>答題(使用者)清單 <a href="tpmlblind_drUserranklist.htm" target="_blank"></a>｜<a href="tpmlblind_drUserlist.htm" target="_blank"></a>｜<a href="tpmlblind_drAnswerview.htm" target="_blank"></a></li>
                             </ul>
                         </td>
                     </tr>
