--- a/aside_tpml.htm
+++ b/aside_tpml.htm
@@ -136,7 +136,7 @@
                     <li><a href="tpmlblind_memberlist.htm"><span>(視障)會員管理</span></a></li>
                     <li><a href="tpmlblind_messagelist.htm"><span>(視障)留言版管理</span></a></li>
                     <li><a href="tpmlblind_drlist.htm"><span>(視障)博士通問答管理</span></a></li>
-                    <li><a href="#"><span>(視障)博士通答題清單</span></a></li>
+                    <li><a href="tpmlblind_drUserranklist.htm"><span>(視障)博士通答題清單</span></a></li>
                 </ul>
             </li>
         </ul>
