--- a/tpmlblind_drUserranklist.htm
+++ b/tpmlblind_drUserranklist.htm
@@ -128,7 +128,7 @@
                                                 <tr>
                                                     <!--td><input type="checkbox"></td-->
                                                     <td class="num" data-title="編號">1</td>
-                                                    <td data-title="姓名(回答者)"><a href="#" title="答題列表">劉佳淇</a></td>
+                                                    <td data-title="姓名(回答者)"><a href="tpmlblind_drUserlist.htm" title="答題列表">劉佳淇</a></td>
                                                     <td data-title="身分證字號">A123456789</td>
                                                     <td data-title="回答題數">111</td>
                                                     <td data-title="答對題數">99</td>
@@ -136,7 +136,7 @@
                                                     <td data-title="排名">1</td>
                                                     <td data-title="編輯">
                                                         <div class="btn_grp">
-                                                            <a href="#" class="btn" title="審核"><i class="i_edit"></i>答題列表</a>
+                                                            <a href="tpmlblind_drUserlist.htm" class="btn" title="審核"><i class="i_edit"></i>答題列表</a>
                                                         </div>
                                                     </td>
                                                 </tr>
