--- a/index_list.html
+++ b/index_list.html
@@ -12,7 +12,7 @@
     <![endif]-->
     <link rel="stylesheet" href="css/supercms.css">
     <!-- favicon -->
-    <link href="images/favicon_tpml.png" rel="icon" type="image/x-icon">
+    <link href="images/favicon.png" rel="icon" type="image/x-icon">
     <style>
         html {
             scroll-behavior: smooth;
