--- a/sysQA_answerList.htm
+++ b/sysQA_answerList.htm
@@ -136,7 +136,7 @@
                                         </form>
                                     </div>
                                     <div class="quick_btn">
-                                        <button class="btn btn-orange" onclick="window.location.href='sysQA_answerAdd.htm';"><i class="i_add"></i>新增書面答題資料</button>
+                                        <button class="btn btn-orange" onclick="window.location.href='sysQA_answerAdd.htm?qid={qid}';"><i class="i_add"></i>新增書面答題資料</button>
                                     </div>
                                 </div>
                                 <div class="_content">
